tests/invalid/simple/Return_CompileFail_2.whiley
bool f(int x):
    return x
